--- a/templates/standard/categories.html
+++ b/templates/standard/categories.html
@@ -1,69 +1,69 @@
-<?if ($catid && is_numeric($catid)){?>
+<?php if ($catid && is_numeric($catid)){?>
 
 	<!-- category tree -->
 	<br/>
 	<div class="main_cat1">
-	<a href="search.php"><?=$sph_messages['Categories']?></a> >
-	<?foreach ($cat_info['cat_tree'] as $_val){?>
-		<a href="?catid=<?=$_val['category_id']?>"><?=$_val['category']?></a> >
-	<? }?>
+	<a href="search.php"><?php print $sph_messages['Categories']?></a> >
+	<?php foreach ($cat_info['cat_tree'] as $_val){?>
+		<a href="?catid=<?php print $_val['category_id']?>"><?php print $_val['category']?></a> >
+	<?php  }?>
 	</div>
 	
 	
 	<!-- list of sub-categories -->
-	<?if ($cat_info['subcats']){?>
-		<div class="catBanner"><?=$sph_messages['Categories']?></div><br/>
-		<?foreach ($cat_info['subcats'] as $_key => $_val){?>
-			<a href="?catid=<?=$_val['category_id']?>"><b><?=$_val['category']?></b></a> (<?=$_val['count'][0][0]?>)<br>
-		<? }?>
-	<? }?>
+	<?php if ($cat_info['subcats']){?>
+		<div class="catBanner"><?php print $sph_messages['Categories']?></div><br/>
+		<?php foreach ($cat_info['subcats'] as $_key => $_val){?>
+			<a href="?catid=<?php print $_val['category_id']?>"><b><?php print $_val['category']?></b></a> (<?php print $_val['count'][0][0]?>)<br>
+		<?php  }?>
+	<?php  }?>
 		
 		
 	<!-- list of category web pages -->
-	<?if ($cat_info['cat_sites']){?>
-		<div class="webPageBanner"><?=$sph_messages['Web pages']?></div><br/>
-		<?foreach ($cat_info['cat_sites'] as $_key => $_val){?>
-			<b><?=$_key + 1?>.</b> <a href="<?=$_val['url']?>"><b><?=$_val['title']?></b></a><br><?=$_val['short_desc']?><br><font class="url"><?=$_val['url']?></font><br><br>
-		<? }?>		
-	<? }?>	 
+	<?php if ($cat_info['cat_sites']){?>
+		<div class="webPageBanner"><?php print $sph_messages['Web pages']?></div><br/>
+		<?php foreach ($cat_info['cat_sites'] as $_key => $_val){?>
+			<b><?php print $_key + 1?>.</b> <a href="<?php print $_val['url']?>"><b><?php print $_val['title']?></b></a><br><?php print $_val['short_desc']?><br><font class="url"><?php print $_val['url']?></font><br><br>
+		<?php  }?>		
+	<?php  }?>	 
 <div class="divline">
 </div>
 
-<?} else {?>
+<?php } else {?>
 
 
 
 	<!-- category selection -->
-	<?if ($cat_info['main_list']){?>
+	<?php if ($cat_info['main_list']){?>
 	<center><br>
 		<div id="cat_main">	
-		<?=$sph_messages['CATEGORIES']?>
+		<?php print $sph_messages['CATEGORIES']?>
 		</div>
 
 		<table id="cat_table" border="0" cellpadding="4">
 		<tr>
-		<?foreach ($cat_info['main_list'] as $_key => $_val){
+		<?php foreach ($cat_info['main_list'] as $_key => $_val){
 			$col_width=100/$cat_columns?>
-			<td width="<?=$col_width?>%"> 
-				<a href="?catid=<?=$_val['category_id']?>" class="main_cat1"><?=$_val['category']?></a><br>&nbsp;&nbsp;
-				<?if (is_array($_val['sub'])) {
+			<td width="<?php print $col_width?>%"> 
+				<a href="?catid=<?php print $_val['category_id']?>" class="main_cat1"><?php print $_val['category']?></a><br>&nbsp;&nbsp;
+				<?php if (is_array($_val['sub'])) {
 				foreach ($_val['sub'] as $__key => $__val){?>
 					<!-- only 3 subcategories -->
-					<?if ($__key > 2) break?>
-					<a href="?catid=<?=$__val['category_id']?>" class="main_cat2"><?=$__val['category']?></a>
-				<? }?>
-				<?}?>
+					<?php if ($__key > 2) break?>
+					<a href="?catid=<?php print $__val['category_id']?>" class="main_cat2"><?php print $__val['category']?></a>
+				<?php  }?>
+				<?php }?>
 			</td>	
 			<!-- column nr defined in config -->
-			<?if (!(($_key +1)% $cat_columns)) {?></tr><tr><? }?>
-		<? }?>
+			<?php if (!(($_key +1)% $cat_columns)) {?></tr><tr><?php  }?>
+		<?php  }?>
 		</tr>
 		</table>
-	<? }?>
-<? }?>
+	<?php  }?>
+<?php  }?>
 
 <div id="powered_by">
 <!--If you want to remove this, please donate to the project--> 
-<?poweredby()?> 
+<?php poweredby()?> 
 </div>
 
