--- a/templates/standard/search_results.html
+++ b/templates/standard/search_results.html
@@ -1,38 +1,38 @@
 <br/>
-<?
+<?php 
 extract($search_results);
 ?>
 
-<?if ($search_results['did_you_mean']){?>
+<?php if ($search_results['did_you_mean']){?>
 	<div id="did_you_mean">
-	Did you mean: <a href="<?='search.php?query='.quote_replace(addmarks($search_results['did_you_mean'])).'&search=1'?>"><?=$search_results['did_you_mean_b']; ?></a>?
+	Did you mean: <a href="<?php print 'search.php?query='.quote_replace(addmarks($search_results['did_you_mean'])).'&search=1'?>"><?php print $search_results['did_you_mean_b']; ?></a>?
     </div>
-<? }?>	
+<?php  }?>	
 
-<?if ($search_results['ignore_words']){?>
+<?php if ($search_results['ignore_words']){?>
 	<div id="common_report">
-	<?while ($thisword=each($ignore_words)) {
+	<?php while ($thisword=each($ignore_words)) {
 		$ignored .= " ".$thisword[1];
 	}		
 	$msg = str_replace ('%ignored_words', $ignored, $sph_messages["ignoredWords"]); 
 	echo $msg; ?>
     </div>
-<? }?>	
+<?php  }?>	
 
 
-<?if ($search_results['total_results']==0){?>
+<?php if ($search_results['total_results']==0){?>
 	<div id ="result_report">
-		<?
+		<?php 
 		$msg = str_replace ('%query', $ent_query, $sph_messages["noMatch"]);
 		echo $msg;
 		?>
 	</div>
-<? }?>	
+<?php  }?>	
 
 
-<?if ($total_results != 0 && $from <= $to){?>
+<?php if ($total_results != 0 && $from <= $to){?>
 	<div id ="result_report">
-	<? 
+	<?php  
 	$result = $sph_messages['Results'];
 	$result = str_replace ('%from', $from, $result);
 	$result = str_replace ('%to', $to, $result);
@@ -49,17 +49,17 @@ extract($search_results);
 	echo $result;
 	?>
 	</div>
-<? }?>	
+<?php  }?>	
 
 
-<?if (isset($qry_results)) {
+<?php if (isset($qry_results)) {
 ?>
 
 <div id="results">
 
 <!-- results listing -->
 
-	<?foreach ($qry_results as $_key => $_row){
+	<?php foreach ($qry_results as $_key => $_row){
 		$last_domain = $domain_name;
 		extract($_row);
 		if ($show_query_scores == 0) {
@@ -68,23 +68,23 @@ extract($search_results);
 			$weight = "[$weight%]"; 
 		}
 		?>
-		<? if ($domain_name==$last_domain && $merge_site_results == 1 && $domain == "") {?>
+		<?php  if ($domain_name==$last_domain && $merge_site_results == 1 && $domain == "") {?>
 		<div class="idented">
-		<?}?>
-		<b><?=$num?>.</b> <?=$weight?>
-		<a href="<?=$url?>" class="title">	<?=($title?$title:$sph_messages['Untitled'])?></a><br/>
-		<div class="description"><?=$fulltxt?></div>
-		<div class="url"><?=$url2?> - <?=$page_size?></div>
-		<? if ($domain_name==$last_domain && $merge_site_results == 1 && $domain == "") {?>
-			[ <a href="<?='search.php?query='.quote_replace(addmarks($query)).'&search=1&results='.$results_per_page.'&domain='.$domain_name?>">More results from <?=$domain_name?></a> ]
+		<?php }?>
+		<b><?php print $num?>.</b> <?php print $weight?>
+		<a href="<?php print $url?>" class="title">	<?php print ($title?$title:$sph_messages['Untitled'])?></a><br/>
+		<div class="description"><?php print $fulltxt?></div>
+		<div class="url"><?php print $url2?> - <?php print $page_size?></div>
+		<?php  if ($domain_name==$last_domain && $merge_site_results == 1 && $domain == "") {?>
+			[ <a href="<?php print 'search.php?query='.quote_replace(addmarks($query)).'&search=1&results='.$results_per_page.'&domain='.$domain_name?>">More results from <?php print $domain_name?></a> ]
 			</div class="idented">
-		<?}?>
+		<?php }?>
 		<br/>
-	<? }
+	<?php  }
 }?>
 
 <!-- links to other result pages-->
-<?if (isset($other_pages)) {
+<?php if (isset($other_pages)) {
 	if ($adv==1) {
 		$adv_qry = "&adv=1";
 	}
@@ -93,33 +93,33 @@ extract($search_results);
 	}
 ?>
 	<div id="other_pages">
-	<?=$sph_messages["Result page"]?>:
-	<?if ($start >1){?>
-				<a href="<?='search.php?query='.quote_replace(addmarks($query)).'&start='.$prev.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?=$sph_messages['Previous']?></a>
-	<? }?>	
+	<?php print $sph_messages["Result page"]?>:
+	<?php if ($start >1){?>
+				<a href="<?php print 'search.php?query='.quote_replace(addmarks($query)).'&start='.$prev.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?php print $sph_messages['Previous']?></a>
+	<?php  }?>	
 
-	<? foreach ($other_pages as $page_num) {
+	<?php  foreach ($other_pages as $page_num) {
 				if ($page_num !=$start){?>
-					<a href="<?='search.php?query='.quote_replace(addmarks($query)).'&start='.$page_num.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?=$page_num?></a>
-				<?} else {?>	
-					<b><?=$page_num?></b>
-				<? }?>	
-	<? }?>
+					<a href="<?php print 'search.php?query='.quote_replace(addmarks($query)).'&start='.$page_num.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?php print $page_num?></a>
+				<?php } else {?>	
+					<b><?php print $page_num?></b>
+				<?php  }?>	
+	<?php  }?>
 
-	<?if ($next <= $pages){?>	
-			<a href="<?='search.php?query='.quote_replace(addmarks($query)).'&start='.$next.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?=$sph_messages['Next']?></a>
-	<? }?>	
+	<?php if ($next <= $pages){?>	
+			<a href="<?php print 'search.php?query='.quote_replace(addmarks($query)).'&start='.$next.'&search=1&results='.$results_per_page.$type_qry.$adv_qry.'&domain='.$domain?>"><?php print $sph_messages['Next']?></a>
+	<?php  }?>	
 
 	</div>
 
-<?}?>
+<?php }?>
 
 
 <div class="divline">
 </div>
 <div id="powered_by">
 <!--If you want to remove this, please donate to the project--> 		
-<?poweredby()?>
+<?php poweredby()?>
 </div>
 
 </div>
