Sphider 1.3.1f, release date 17-03-2007
"Did you mean" string no longer hardcoded in templates (Ando Saabas)
Formatting bug due to extra </div> in template fixed (Ando Saabas, Frank
Carius)
Sphider can now find links which are given via the base tag (Jason
Judge)
Serbian language file added (Aleks)
Slovenian language file added (Damir Kervina)
Some minor bug fixes (Ando Saabas)

--- a/templates/standard/search_results.html
+++ b/templates/standard/search_results.html
@@ -5,7 +5,7 @@ extract($search_results);
 
 <?php if ($search_results['did_you_mean']){?>
 	<div id="did_you_mean">
-	Did you mean: <a href="<?php print 'search.php?query='.quote_replace(addmarks($search_results['did_you_mean'])).'&search=1'?>"><?php print $search_results['did_you_mean_b']; ?></a>?
+	<?php echo $sph_messages['DidYouMean'];?>: <a href="<?php print 'search.php?query='.quote_replace(addmarks($search_results['did_you_mean'])).'&search=1'?>"><?php print $search_results['did_you_mean_b']; ?></a>?
     </div>
 <?php  }?>	
 
@@ -80,8 +80,9 @@ extract($search_results);
 			</div class="idented">
 		<?php }?>
 		<br/>
-	<?php  }
-}?>
+	<?php  }?>
+ </div>
+<?php }?>
 
 <!-- links to other result pages-->
 <?php if (isset($other_pages)) {
@@ -122,4 +123,3 @@ extract($search_results);
 <?php poweredby()?>
 </div>
 
-</div>
