--- a/templates/standard/header.html
+++ b/templates/standard/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <TITLE> Sphider </TITLE>
   <link type="text/css" rel="stylesheet" href="templates/standard/search.css">
   <!-- suggest script -->
