--- a/templates/standard/search_results.html
+++ b/templates/standard/search_results.html
@@ -119,7 +119,7 @@ extract($search_results);
 <div class="divline">
 </div>
 <div id="powered_by">
-<!--If you want to remove this, please donate to the project--> 		
+<!--If you want to remove this, please donate to the project at http://www.sphider.eu/donate.php--> 		
 <?php poweredby()?>
 </div>
 
