--- a/templates/dark/header.html
+++ b/templates/dark/header.html
@@ -3,7 +3,7 @@
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <TITLE> Sphider </TITLE>
-  <link type="text/css" rel="stylesheet" href="templates/standard/search.css">
+  <link type="text/css" rel="stylesheet" href="templates/dark/search.css">
   <!-- suggest script -->
 	<style type="text/css">@import url("include/js_suggest/SuggestFramework.css");</style>
 	<script type="text/javascript" src="include/js_suggest/SuggestFramework.js"></script>
