--- a/templates/standard/header.html
+++ b/templates/standard/header.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<TITLE> Sphider </TITLE>
+<TITLE><?php echo $pagetitle ?> :: Sphider</TITLE>
   <link type="text/css" rel="stylesheet" href="templates/standard/search.css">
   <!-- suggest script -->
 	<style type="text/css">@import url("include/js_suggest/SuggestFramework.css");</style>
